src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Styles/app.scss
@import 'abstracts/_functions.scss';
@import 'abstracts/_bit-css-variables.scss';

:root {
    --bit-status-bar-height: 0px;
}

* {
    box-sizing: border-box;
    font-family: "Segoe UI";
    -webkit-text-size-adjust: none;
    -webkit-tap-highlight-color: transparent;
}

.bit-blazor-hybrid, .bit-blazor-electron {
    *:not(input) {
        -webkit-user-select: none;
        user-select: none;
    }
}

.bit-blazor-hybrid {
    &.bit-windows * {
        -webkit-user-drag: none;
    }
}

html, body, #app-container {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    -webkit-font-smoothing: antialiased;
}

#app-container {
    padding-left: env(safe-area-inset-left);
}

.pivot-sticky-header {
    z-index: 10;
    position: sticky;
    padding: 0.25rem 0.5rem;
    box-shadow: $bit-box-shadow-callout;
    background-color: $bit-color-background-secondary;
    top: calc(rem2(75px) + var(--bit-status-bar-height));

    .bit-ios & {
        top: calc(rem2(75px) + env(safe-area-inset-top));
    }
}

